--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.3.5",
+    "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongodb": "^5.2.0",
